# strmr

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
agents/livekit/: README.md  pyproject.toml
agents/livekit/src/: agent_runner.py  config.py
agents/livekit/src/clients/: avatar.py  billing.py  hume.py
agents/livekit/src/llm/: router.py
apps/mobile/: App.tsx  README.md  app.json  package.json  tsconfig.json
apps/web/: README.md  package.json  tsconfig.json
apps/web/src/: styles.css
apps/web/src/components/: ChatPanel.tsx  CreatorCard.tsx  LiveSession.tsx  SessionPaywall.tsx  TipForm.tsx
apps/web/src/context/: AuthContext.tsx
apps/web/src/lib/: api.ts
apps/web/src/pages/: _app.tsx  index.tsx
docs/: architecture.md
infrastructure/: README.md
infrastructure/k8s/: agent-deployment.yaml  api-deployment.yaml  dev-compose.yaml  orchestrator-deployment.yaml
scripts/: setup.sh
services/api/: .eslintrc.cjs  README.md  drizzle.config.ts  package.json  tsconfig.json
services/api/src/: app.ts  index.ts
services/api/src/config/: env.ts
services/api/src/db/: client.ts  schema.ts
services/orchestrator/: README.md  pyproject.toml
services/orchestrator/src/: api.py  config.py
services/orchestrator/src/clients/: object_store.py  vector.py
services/orchestrator/src/events/: models.py
services/orchestrator/src/pipelines/: asr.py  clone.py  embeddings.py
services/orchestrator/src/workers/: celery_app.py  clone_tasks.py
(+25 files in other folders)
