[tool.poetry]
name = "strmr-livekit-agents"
version = "0.1.0"
description = "LiveKit Agent runtime that coordinates LLM, Hume EVI, Beyond Presence, and billing."
authors = ["strmr.ai <dev@strmr.ai>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
livekit-agents = "0.5.0"
httpx = "0.27.2"
python-dotenv = "1.0.1"
openai = "1.51.0"
stripe = "10.4.0"
loguru = "0.7.2"
asyncio = "3.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
ruff = "0.6.9"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
