[tool.poetry]
name = "strmr-orchestrator"
version = "0.1.0"
description = "Clone build and data processing worker for multi-tenant AI avatars."
authors = ["strmr.ai <dev@strmr.ai>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
celery = "5.4.0"
redis = "5.1.1"
hume = "0.5.1"
httpx = "0.27.2"
python-dotenv = "1.0.1"
qdrant-client = "1.12.1"
boto3 = "1.35.27"
pydantic = "2.9.2"
fastapi = "0.115.5"
uvicorn = "0.32.0"
phonemizer = "3.3.0"
openai = "1.51.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
ruff = "0.6.9"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
